--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
       integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
       crossorigin="anonymous"
     />
-    <title>Waste My Primos</title>
+    <title>Genshin Impact Gacha</title>
   </head>
   <body>
     <div id="root"></div>
